objects/SendMailResult__e.object
<CustomObject>
    <fields>
        <fullName>Mail_Event_Type__c</fullName>
        <label>Mail_Event_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_Id__c</fullName>
        <label>Mail Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Message__c</fullName>
        <label>Result_Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isSuccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSuccess</label>
        <type>Checkbox</type>
    </fields>
    <label>SendMailResult</label>
    <pluralLabel>SendMailResults</pluralLabel>
</CustomObject>